--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/books
+spring.datasource.url=jdbc:postgresql://localhost:5433/books
 spring.datasource.username=wp
-spring.datasource.password=wp
+spring.datasource.password=wp123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.connectionTimeout=20000
